@@ -1,3 +1,8 @@
+2006-11-16  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_RelationView.py: share parents button
+	* src/images/share-fam.png: share parents button
+	* src/gramps_main.py: share parents button
+
 2006-11-16  Alex Roitman  <shura@phy.ucsf.edu>
 	* src/Reorder.py: Import gettext.
 
